fix name align and card height

--- a/client/src/components/Country/Country.module.css
+++ b/client/src/components/Country/Country.module.css
@@ -1,6 +1,8 @@
 .container {
     position: relative;
-    width: 20%;
+    width: 16em;
+    height: 26vh;
+    max-width: 100%;
     margin: 2em;
     border-radius: 6px;
     position: relative;
@@ -42,6 +44,7 @@
 .name, .continent {
     color: #fff;
     text-shadow: #000 0.0625rem 0 0.625rem;
+    text-align: center;
 }
 
 .link {
